--- a/views/index/index.html
+++ b/views/index/index.html
@@ -34,92 +34,22 @@
                             <ul class="nav nav-pills flex-column">
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 今日统计
-                                        <span class="badge bg-primary float-right">0</span>
+                                        <i class="fas fa-inbox"></i> 今日统计(元)
+                                        <span class="badge bg-primary float-right" id="to-day-statistics">0</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 1月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
+                                    <label for="startDate">起始日期</label>
+                                    <input type="date" id="startDate">
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 2月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
+                                    <label for="endDate">截至日期</label>
+                                    <input type="date" id="endDate">
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 3月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 4月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 5月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 6月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 7月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 8月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 9月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 10月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 11月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 12月统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 今年统计
-                                        <span class="badge bg-primary float-right">0</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fas fa-inbox"></i> 去年统计
-                                        <span class="badge bg-primary float-right">0</span>
+                                    <a href="#" class="nav-link" id="click-statistics">
+                                        <i class="fas fa-inbox"></i> 点击统计
+                                        <span class="badge bg-primary float-right" id="statistics-click">0</span>
                                     </a>
                                 </li>
                             </ul>
