#1. 修改js日期错误

--- a/views/index/index.html
+++ b/views/index/index.html
@@ -11,7 +11,7 @@
         <!-- Font Awesome -->
         <link rel="stylesheet" href="/static/js/fontawesome-free/css/all.min.css">
         <!-- Ionicons -->
-        <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+        <link rel="stylesheet" href="/static/css/http_code.ionicframework.com_ionicons_2.0.1_css_ionicons.min.css">
         <!-- Theme style -->
         <link rel="stylesheet" href="/static/css/adminlte.min.css">
         <!-- Google Font: Source Sans Pro -->
